crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__fn_decl_with_basic_params.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  FN_DECL
    PROTO
      NAME
        IDENT `x`
      PARAMS
        IDENT `arg1`
        IDENT `arg2`
    BODY
      PIPELINE
        COMMAND
          STRING `echo`
          STRING `hi`

