crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__home_dir.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `echo`
      BINOP `+`
        HOME_DIR
        STRING `/code`

