crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__if_.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  IF
    BINOP `==`
      IDENT `x`
      NUMBER `3`
    BODY
      PIPELINE
        COMMAND
          IDENT `echo`
          IDENT `hi`
      PIPELINE
        COMMAND
          IDENT `echo`
          IDENT `hi`

