crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__if_with_newlines.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  IF
    BINOP `==`
      IDENT `x`
      NUMBER `3`
    BODY
      PIPELINE
        COMMAND
          STRING `echo`
          STRING `hi`

