crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__implicit_concat.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `echo`
      BINOP `+`
        IDENT `hi`
        BINOP `+`
          STRING `/`
          BINOP `+`
            ENV_VAR `HELLO`
            STRING `/world`

