crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__last_status.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `echo`
      LAST_STATUS
      BINOP `+`
        LAST_STATUS
        NUMBER `10`

